[package]
name = "officis"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode.
[profile-dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"
